--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.core:core-ktx:$core_version"
     implementation "com.google.android.material:material:$material_version"
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
@@ -126,5 +126,9 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.0'
 
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    implementation("com.github.bumptech.glide:glide:4.11.0@aar") {
+        transitive = true
+    }
 
 }
