--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,20 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        analytics_version = '17.3.0'
-        auth_version = '19.3.0'
+        analytics_version = '17.4.0'
+        auth_version = '19.3.1'
         appcompat_version = '1.1.0'
         material_version = '1.1.0'
         constraintlayout_version = '1.1.3'
         multidexVersion = '2.0.1'
         timber_version = "4.7.1"
         room_version = "2.2.5"
-         nav_version = "2.3.0-alpha04"
+         nav_version = "2.3.0-alpha05"
         nav_safe_args_version = "2.2.1"
         core_version ="1.2.0"
+        lifecycle_extensions_version = "2.2.0"
+        coroutine_version = "1.1.0"
+
     }
     repositories {
         google()
