--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.example.android.androidmarki"
@@ -50,6 +50,11 @@ android {
     }
 // To inline the bytecode built with JVM target 1.8 into
 // bytecode that is being built with JVM target 1.6. (e.g. navArgs)
+
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
@@ -63,6 +68,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -70,8 +76,8 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     //firebase
-    implementation "com.google.firebase:firebase-analytics:$analytics_version"
-    implementation "com.google.firebase:firebase-auth:$auth_version"
+    implementation "com.google.firebase:firebase-analytics-ktx:$analytics_version"
+    implementation "com.google.firebase:firebase-auth-ktx:$auth_version"
 
     //multidex Lib
     implementation "androidx.multidex:multidex:$rootProject.multidexVersion"
@@ -79,21 +85,17 @@ dependencies {
     //Timber
     implementation "com.jakewharton.timber:timber:$timber_version"
 
-    // Koin
-    implementation 'org.koin:koin-android:1.0.2'
-    implementation 'org.koin:koin-android-viewmodel:1.0.2'
-    androidTestImplementation 'org.koin:koin-test:1.0.2'
-
     // Stetho is a sophisticated debug bridge for Android applications. When enabled, developers have access to the Chrome Developer Tools feature natively part of the Chrome desktop browser.
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation("com.github.bumptech.glide:glide:4.11.0@aar") {
+        transitive = true
+    }
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // For Kotlin use kapt instead of annotationProcessor
+   kapt "androidx.room:room-compiler:$room_version"    // For Kotlin use kapt instead of annotationProcessor
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
@@ -111,26 +113,52 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha03'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha03'
 
-    
-    //live data viewmodel lifecycle
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha01"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha01'
 
+    //live data viewmodel lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    // optional - helpers for implementing LifecycleOwner in a Service
+    implementation "androidx.lifecycle:lifecycle-service:$lifecycle_version"
+
+    // optional - ProcessLifecycleOwner provides a lifecycle for the whole application process
+    implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
+
+    // optional - ReactiveStreams support for LiveData
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+
+    // optional - Test helpers for LiveData
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
     //live data viewmodel lifecycle
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
-    implementation("com.github.bumptech.glide:glide:4.11.0@aar") {
-        transitive = true
-    }
 
-    // Room and Lifecycle dependencies
-
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions_version"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutine_version"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    // Retrofit Coroutines Support
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
 
 }
