--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,16 @@ buildscript {
         multidexVersion = '2.0.1'
         timber_version = "4.7.1"
         room_version = "2.2.5"
-         nav_version = "2.3.0-alpha05"
+        nav_version = "2.3.0-alpha05"
         nav_safe_args_version = "2.2.1"
         core_version ="1.2.0"
-        lifecycle_extensions_version = "2.2.0"
-        coroutine_version = "1.1.0"
+        lifecycle_version = "2.2.0"
+        coroutine_version = "1.3.5"
+       moshi_version = "1.8.0"
+        retrofit_version = "2.5.0"
+        retrofit_coroutines_adapter_version = "0.9.2"
+        recyclerview_version = "1.0.0"
+        arch_version = "2.1.0"
 
     }
     repositories {
