--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
             debuggable true
 
         }
+        debug {
+            ext.alwaysUpdateBuildId = false
+            crunchPngs false // Enabled by default for RELEASE build type
+
+        }
     }
 
 //bytecode
@@ -110,8 +115,8 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     //androidx fragment and activity
-    implementation 'androidx.activity:activity-ktx:1.2.0-alpha03'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha03'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha04'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha04'
 
 
     //live data viewmodel lifecycle
@@ -159,6 +164,9 @@ dependencies {
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-
+    // Joda time library for dealing with time
+    implementation "joda-time:joda-time:$joda_version"
+    // WorkManager
+    implementation "android.arch.work:work-runtime-ktx:$work_version"
 
 }
