--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,4 +169,7 @@ dependencies {
     // WorkManager
     implementation "android.arch.work:work-runtime-ktx:$work_version"
 
+
+    // Client for retrieving location
+    implementation "com.google.android.gms:play-services-location:$play_services_version"
 }
