--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         arch_version = "2.1.0"
         work_version =  "1.0.0-alpha11"
         joda_version = "2.10"
+       play_services_version = "16.0.0"
 
     }
     repositories {
