--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        analytics_version = '17.4.0'
-        auth_version = '19.3.1'
+        firebase_analytics_version = '17.4.0'
+        firebase_auth_version = '19.3.1'
         appcompat_version = '1.1.0'
         material_version = '1.1.0'
         constraintlayout_version = '1.1.3'
@@ -23,8 +23,10 @@ buildscript {
         arch_version = "2.1.0"
         work_version =  "1.0.0-alpha11"
         joda_version = "2.10"
-       play_services_version = "16.0.0"
-
+       play_services_version = "17.0.0"
+        firebase_core_version  = "17.4.0"
+        firebase_message_version = "20.1.6"
+        firebase_iid_version ="20.1.6"
     }
     repositories {
         google()
