--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        firebase_analytics_version = '17.4.0'
+        firebase_analytics_version = '17.4.1'
         firebase_auth_version = '19.3.1'
         appcompat_version = '1.1.0'
         material_version = '1.1.0'
-        constraintlayout_version = '1.1.3'
+        constraintlayout_version = '2.0.0-beta6'
         multidexVersion = '2.0.1'
         timber_version = "4.7.1"
         room_version = "2.2.5"
@@ -24,9 +24,9 @@ buildscript {
         work_version =  "1.0.0-alpha11"
         joda_version = "2.10"
        play_services_version = "17.0.0"
-        firebase_core_version  = "17.4.0"
-        firebase_message_version = "20.1.6"
-        firebase_iid_version ="20.1.6"
+        firebase_core_version  = "17.4.1"
+        firebase_message_version = "20.1.7"
+        firebase_iid_version ="20.1.7"
     }
     repositories {
         google()
