--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    // Define versions in a single place
     ext {
+        // Sdk and tools
+        // Support library and architecture components support minSdk 14 and above.
+        minSdkVersion = 17
+        targetSdkVersion = 29
+        compileSdkVersion = 29
+
+        // App dependencies
+
         kotlin_version = '1.3.72'
-        firebase_analytics_version = '17.4.1'
-        firebase_auth_version = '19.3.1'
         appcompat_version = '1.1.0'
         material_version = '1.1.0'
         constraintlayout_version = '2.0.0-beta6'
@@ -24,9 +31,21 @@ buildscript {
         work_version =  "1.0.0-alpha11"
         joda_version = "2.10"
        play_services_version = "17.0.0"
-        firebase_core_version  = "17.4.1"
-        firebase_message_version = "20.1.7"
-        firebase_iid_version ="20.1.7"
+        androidX_legacy_support = '1.0.0'
+        card_version = '1.0.0'
+        androidX_annotations = '1.1.0'
+        espresso_version = '3.3.0-beta01'
+        junit_version = '4.13'
+        androidX_test_ext_kotlin_runner_version = '1.1.1'
+        fragment_version = '1.3.0-alpha05'
+        activity_version = '1.2.0-alpha05'
+        preference_version = "1.1.1"
+        hamcrest_version = '1.3'
+        robolectric_version = '4.3.1'
+        dex_maker_version = '2.12.1'
+        mockito_version = '2.8.9'
+        androidX_test_core_version = '1.2.0'
+
     }
     repositories {
         google()
