--- a/build.gradle
+++ b/build.gradle
@@ -6,60 +6,61 @@ buildscript {
         // Sdk and tools
         // Support library and architecture components support minSdk 14 and above.
         minSdkVersion = 17
-        targetSdkVersion = 29
-        compileSdkVersion = 29
+        targetSdkVersion = 30
+        compileSdkVersion = 30
 
         // App dependencies
 
-        kotlin_version = '1.3.72'
-        appcompat_version = '1.1.0'
-        material_version = '1.1.0'
-        constraintlayout_version = '2.0.0-beta6'
+        kotlin_version = "1.5.31"
+        appcompat_version = "1.3.1"
+        constraintlayout_version = '2.1.0'
         multidexVersion = '2.0.1'
         timber_version = "4.7.1"
-        room_version = "2.2.5"
-        nav_version = "2.3.0-alpha06"
-        nav_safe_args_version = "2.2.1"
-        core_version ="1.2.0"
-        lifecycle_version = "2.3.0-alpha02"
-        coroutine_version = "1.3.5"
-       moshi_version = "1.8.0"
-        retrofit_version = "2.5.0"
+        room_version = "2.3.0"
+        nav_version = '2.3.5'
+        nav_safe_args_version = '2.3.5'
+        lifecycle_version = "2.3.0"
+        core_version = "1.6.0"
+        moshi_version = "1.9.2"
+        retrofit_version = "2.9.0"
         retrofit_coroutines_adapter_version = "0.9.2"
-        recyclerview_version = "1.0.0"
+        recyclerview_version = "1.2.1"
         arch_version = "2.1.0"
         work_version =  "1.0.0-alpha11"
         joda_version = "2.10"
        play_services_version = "17.0.0"
         androidX_legacy_support = '1.0.0'
         card_version = '1.0.0'
-        androidX_annotations = '1.1.0'
+        coroutine_version = "1.4.0"
+        material_version = "1.4.0"
+           androidX_annotations = '1.1.0'
         espresso_version = '3.3.0-beta01'
         junit_version = '4.13'
-        androidX_test_ext_kotlin_runner_version = '1.1.1'
-        fragment_version = '1.3.0-alpha05'
-        activity_version = '1.2.0-alpha05'
+        androidX_test_ext_kotlin_runner_version = '1.1.3'
+        fragment_version = '1.3.6'
+        activity_version = '1.4.0'
         preference_version = "1.1.1"
         hamcrest_version = '1.3'
-        robolectric_version = '4.3.1'
+        robolectric_version = '4.6'
         dex_maker_version = '2.12.1'
         mockito_version = '2.8.9'
-        androidX_test_core_version = '1.2.0'
+        androidX_test_core_version = '1.4.0'
 
     }
     repositories {
         google()
+        mavenCentral()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         /**firebase**/
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.10'
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_safe_args_version"
 
@@ -69,8 +70,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        
+
     }
 }
 
